--- a/Vyomika/templates/Student/class.html
+++ b/Vyomika/templates/Student/class.html
@@ -2,20 +2,25 @@
 
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
-<div class="card mb-3">
-    <img src="..." class="card-img-top" alt="...">
+{% load static %}
+<div class="card col-md-6 mb-3">
+    <img src="{% static 'IT.jpg' %}" class="card-img-top" alt="IT" style="height: 20em;">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div class="d-grid gap-2" style="float: center;">
+           <a href="student/"><button class="btn btn-outline-dark" type="button" href="student/">Information Technology</button></a> 
+        </div>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+            This content is a little bit longer.</p>
     </div>
-  </div>
-  <div class="card">
+</div>
+<div class="card col-md-6" style="margin-left: auto;">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div class="d-grid gap-2" style="float: center;">
+            <button class="btn btn-outline-dark " type="button">Business Administration</button>
+        </div>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+            This content is a little bit longer.</p>
     </div>
-    <img src="..." class="card-img-bottom" alt="...">
-  </div>
+    <img src="{% static 'bba.png' %}" class="card-img-bottom" alt="bba" style="height: 20em;">
+</div>
 {% endblock %}
