--- a/Vyomika/templates/Student/stdmgmt.html
+++ b/Vyomika/templates/Student/stdmgmt.html
@@ -2,6 +2,8 @@
 
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
+<a href="addStudent/"><button type="button" class="btn btn-outline-dark m-3">Add Students</button></a>
+
 <table class="table align-middle mb-0 bg-white">
     <thead class="bg-light">
         <tr>
@@ -40,4 +42,4 @@
         </tr>
     </tbody>
 </table>
-{% endblock %}
+    {% endblock %}
